hugo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
   labels:
        gatekeeper.exclude/enforced-repos: GMI
   name: hugo
