hugo-books-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hugo
  name: hugo-books-api-deployment
  labels:
    app: hugo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hugo-books-api
  template:
    metadata:
      namespace: hugo
      labels:
        app: hugo-books-api
    spec:
      serviceAccountName: hugo-service-account
      securityContext:
            runAsUser: 1000
            fsGroup: 2000
      containers:
        - name: hugo-books-api-container
          securityContext:
            allowPrivilegeEscalation: false
          image: hugo-books-api:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: "/mnt/hugo-storage"
              name: hugo-volume
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: hugo-volume
          persistentVolumeClaim:
            claimName: hugo-persistent-volume-claim
