hugo-books-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hugo-books-api-pod
  labels:
    app: hugo
spec:
  serviceAccountName: hugo-service-account
  securityContext:
        runAsUser: 1000
        fsGroup: 2000
  containers:
    - name: hugo-books-api-container
      securityContext:
        allowPrivilegeEscalation: false
      image: hugo-books-api:latest
      imagePullPolicy: Never
      volumeMounts:
        - mountPath: "/mnt/hugo-storage"
          name: hugo-volume
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - name: http
          containerPort: 5000
      livenessProbe:
        httpGet:
          path: /health
          port: http
        failureThreshold: 1
        periodSeconds: 10
      startupProbe:
        httpGet:
          path: /health
          port: http
        failureThreshold: 30
        periodSeconds: 10
  volumes:
    - name: hugo-volume
      persistentVolumeClaim:
        claimName: hugo-persistent-volume-claim
