hugo-books-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-books-api-service
spec:
  selector:
    app: hugo-books-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
