hugo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            hugo-books-api-service
          port:
            number: 80
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: hugo-books-api-service
            port:
              number: 80
